--- a/src/darK12/darK12.user.css
+++ b/src/darK12/darK12.user.css
@@ -4,9 +4,10 @@
 @homepageURL	https://github.com/iblowmymind/userstyles
 @supportURL		https://github.com/iblowmymind/userstyles/issues
 @updateURL		https://raw.githubusercontent.com/iblowmymind/userstyles/main/src/darK12/darK12.user.css
-@version        0.0.14
+@version        0.0.15
 @description    Just a dark mode for K12. Yes.
-@author         blw
+@author         blw (https://blw.carrd.co)
+@license        MIT
 ==/UserStyle== */
 @-moz-document url-prefix("https://okul.k12net.com"),
 regexp("^https?:\\/\\/[-\\w]+\\.k12net\\.com\\/.*"), regexp("^http?:\\/\\/[-\\w]+\\.k12net\\.com\\/.*") {
