- Add zoomjoin (N/A > 0.0.3) - Update darK12's desc. (0.0.15 > 0.0.16)

--- a/src/darK12/darK12.user.css
+++ b/src/darK12/darK12.user.css
@@ -4,8 +4,8 @@
 @homepageURL	https://github.com/iblowmymind/userstyles
 @supportURL		https://github.com/iblowmymind/userstyles/issues
 @updateURL		https://raw.githubusercontent.com/iblowmymind/userstyles/main/src/darK12/darK12.user.css
-@version        0.0.15
-@description    Just a dark mode for K12. Yes.
+@version        0.0.16
+@description    Makes K12Net dark. I don't want my eyes to be blind. So, I wrote this. Enjoy, for it will probably be of no use to you.
 @author         blw (https://blw.carrd.co)
 @license        MIT
 ==/UserStyle== */
