--- a/src/darK12/darK12.user.css
+++ b/src/darK12/darK12.user.css
@@ -4,7 +4,7 @@
 @homepageURL	https://github.com/iblowmymind/userstyles/tree/main/src/darK12
 @supportURL		https://github.com/iblowmymind/userstyles/issues
 @updateURL		https://raw.githubusercontent.com/iblowmymind/userstyles/main/src/darK12/darK12.user.css
-@version        0.0.17.1
+@version        0.0.18
 @description    Makes K12Net dark. I don't want my eyes to be blind. So, I wrote this. Enjoy, for it will probably be of no use to you.
 @author         blw (https://blw.carrd.co)
 @license        MIT
@@ -286,6 +286,52 @@ regexp("^https?:\\/\\/[-\\w]+\\.k12net\\.com\\/.*"), regexp("^http?:\\/\\/[-\\w]
   }
   .message-detail-buttons button {
     background: var(--dark4);
+    color: var(--text);
+  }
+  /* Message Headers - I have to put !important for some reason. */
+  .message-menu {
+    background: var(--darkgreen) !important;
+    color: var(--text);
+    border-color: var(--darkgreen) !important;
+  }
+  /* Message Send */
+  .message-send-wrapper .input-subject,
+  .message-send-wrapper .input-textarea {
+    background: var(--dark3);
+    color: var(--text);
+  }
+  .input-subject {
+    border: 3px solid var(--dark4);
+  }
+  /* Message Target */
+  .btn-outline-dark.disabled,
+  .btn-outline-dark:disabled,
+  .btn-outline-dark {
+    color: var(--text);
+  }
+  /* Success Button */
+  .btn-success:hover {
+    color: var(--text);
+  }
+  .btn-success {
+    color: var(--text);
+    background-color: var(--darkgreen);
+    border-color: var(--darkgreen);
+  }
+  /* File Info Badge */
+  .badge-info {
+    color: var(--text);
+    background-color: var(--blue);
+  }
+  /* Success Alert */
+  .alert-success {
+    background-color: #457b2472;
+    border-color: #c3e6cb33;
+    color: var(--text);
+  }
+  /* Danger Button */
+  .btn-danger {
+    background-color: var(--darkred);
     color: var(--text);
   }
   /* END OF MAIN PAGE BUTTONS */
