--- a/src/darK12/darK12.user.css
+++ b/src/darK12/darK12.user.css
@@ -4,7 +4,7 @@
 @homepageURL	https://github.com/iblowmymind/userstyles/tree/main/src/darK12
 @supportURL		https://github.com/iblowmymind/userstyles/issues
 @updateURL		https://raw.githubusercontent.com/iblowmymind/userstyles/main/src/darK12/darK12.user.css
-@version        0.0.18.1
+@version        0.0.18.2
 @description    Makes K12Net dark. I don't want my eyes to be blind. So, I wrote this. Enjoy, for it will probably be of no use to you.
 @author         blw (https://blw.carrd.co)
 @license        MIT
@@ -311,6 +311,8 @@ regexp("^https?:\\/\\/[-\\w]+\\.k12net\\.com\\/.*"), regexp("^http?:\\/\\/[-\\w]
   }
   /* Success Button */
   .btn-success:hover {
+    background-color: var(--green);
+    border-color: var(--green);
     color: var(--text);
   }
   .btn-success {
@@ -320,7 +322,7 @@ regexp("^https?:\\/\\/[-\\w]+\\.k12net\\.com\\/.*"), regexp("^http?:\\/\\/[-\\w]
   }
   /* Fix for Buttons */
   .btn {
-    color: var(--blue);
+    color: var(--text);
   }
   /* File Info Badge */
   .badge-info {
