Check the changelog in README.md for each project for details.

--- a/src/darK12/darK12.user.css
+++ b/src/darK12/darK12.user.css
@@ -326,10 +326,10 @@ regexp("^https?:\\/\\/[-\\w]+\\.k12net\\.com\\/.*"), regexp("^http?:\\/\\/[-\\w]
     background-color: var(--darkgreen);
     border-color: var(--darkgreen);
   }
-  /* Fix for Buttons */
-  .btn {
+  /* Fix for Buttons (Breaks Messages?)*/
+  /* .btn {
     color: var(--text);
-  }
+  } */
   /* File Info Badge */
   .badge-info {
     color: var(--text);
