--- a/src/zoomjoin/zoomjoin.user.css
+++ b/src/zoomjoin/zoomjoin.user.css
@@ -4,7 +4,7 @@
 @homepageURL	https://github.com/iblowmymind/userstyles
 @supportURL		https://github.com/iblowmymind/userstyles/issues
 @updateURL		https://raw.githubusercontent.com/iblowmymind/userstyles/main/src/zoomjoin/zoomjoin.user.css
-@version        0.0.4
+@version        0.0.5
 @description    Makes the "Launch Meeting" dialogs dark so that I don't get blinded every time.
 @author         blw
 ==/UserStyle== */
@@ -60,6 +60,12 @@ regexp("^http?:\\/\\/[\\w]+\\.zoom\\.us\\/.*"), url-prefix("https://zoom.us/j"),
     #content-wrapper {
         color: var(--text);
         background: var(--dark2);
+    }
+    #context-card {
+        color: var(--text);
+    }
+    #content-section .picture {
+        opacity: 0;
     }
     .launch-section {
         background: var(--dark2);
