Check the changelog in README.md for each project for details.

--- a/src/ActivelyDark/ActivelyDark.user.css
+++ b/src/ActivelyDark/ActivelyDark.user.css
@@ -22,7 +22,23 @@
     
     /* ====== END OF COLORS ====== */
     
-    
+	/* ====== LOGIN PAGE ====== */
+	
+	.MuiOutlinedInput-notchedOutline {
+		border-color: #bfbfbfde;
+	}
+	.MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
+		border-color: #efefefde;
+	}
+	.MuiInputBase-root {
+		color: #bfbfbfde;
+	}
+	.MuiFormLabel-root {
+		color: #bfbfbfde;
+	}
+
+    /* ====== END OF LOGIN PAGE ====== */
+	
     /* ====== MAIN PAGE ====== */
     
     .contentWrapper {
