Check the changelog in README.md for each project for details.

--- a/src/ActivelyDark/ActivelyDark.user.css
+++ b/src/ActivelyDark/ActivelyDark.user.css
@@ -4,7 +4,7 @@
 @homepageURL	https://github.com/iblowmymind/userstyles/tree/main/src/ActivelyDark
 @supportURL		https://github.com/iblowmymind/userstyles/issues
 @updateURL		https://raw.githubusercontent.com/iblowmymind/userstyles/main/src/ActivelyDark/ActivelyDark.user.css
-@version        0.0.2.0
+@version        0.0.3.0
 @description    Makes Actively Learn dark for my eyes.
 @author         blw
 @license		MIT
@@ -56,7 +56,13 @@
     .btn-tab {
         color: #7d8487;
     }
-    
+	.rightDrawerMenu_pageDrawer__e5qsjlkj30v {
+		background-color: #232322;
+	}
+    .rightDrawerMenu_pageDrawer__4shblxr88u.rightDrawerMenu_open__ykdzyit29fh {
+		border-left: 4px solid #3a3a3a
+	}
+
     /* ====== END OF MAIN PAGE ====== */
     
     
